Figured it out!