@@ -8,19 +8,12 @@ public class Main{
     // -----------------------------------
     List<Person> people = new ArrayList<Person>();
 
-    /*people.add(new Person("Frank", "Denton", 73));// open this back up before turnig in
+    people.add(new Person("Frank", "Denton", 73));
     people.add(new Person("Mark", "Cohen", 44));
     people.add(new Person("Tim", "Smith", 22));
     people.add(new Person("Steve", "Denton", 16));
     people.add(new Person("Andy", "Ashton", 44));
-    people.add(new Person("Albert", "Denton", 58));*/
-
-    people.add(new Person("A", "A", 1)); // remove this before turning in
-    people.add(new Person("E", "E", 5));
-    people.add(new Person("F", "F", 6));
-    people.add(new Person("C", "C", 3));
-    people.add(new Person("B", "B", 2));
-    people.add(new Person("D", "D", 4));
+    people.add(new Person("Albert", "Denton", 58));
 
     List<Person> ans = mergeSort(people);
     System.out.println(ans);
@@ -28,20 +21,17 @@ public class Main{
 
   public static List<Person> mergeSort(List<Person> items){
     List<Person> sorted = new ArrayList<Person>();
-
+    // base case
     if (items.size() == 1){
-      //sorted.add(items.get(0));
       sorted = items;
-      System.out.println("Base:" + sorted); //Debug line
-
     }
     else {
-      //create two sublists
+      //two sublists unsorted and two sublists after sorting
       List<Person> listA = new ArrayList<Person>();
       List<Person> listB = new ArrayList<Person>();
       List<Person> sortedA = new ArrayList<Person>();
       List<Person> sortedB = new ArrayList<Person>();
-
+      //create two sublists
       for (int i = 0; i < items.size(); i++){
         if (i % 2 == 0){
           listA.add(items.get(i));
@@ -50,13 +40,10 @@ public class Main{
           listB.add(items.get(i));
         }
       }
-      System.out.println("A: " + listA); //Debug line
-      System.out.println("B: " + listB); //Debug line
-      System.out.println();
       //sort both sublists
       sortedA = mergeSort(listA);
       sortedB = mergeSort(listB);
-      //merge two lists
+      //merge two lists into one
       sorted = merge(sortedA, sortedB);
     }
     return sorted;
@@ -64,42 +51,41 @@ public class Main{
 
   private static List<Person> merge(List<Person> partA, List<Person> partB){
     List<Person> merged = new ArrayList<Person>();
-    int indexA = 0;
-    int indexB = 0;
-    System.out.println("* PartASize:" + partA.size() + "  PartBSize:"+ partB.size()); //Debug line
-    while (indexA < partA.size() && indexB < partB.size()){
-      if (partA.get(indexA).compareTo(partB.get(indexB)) < 0){
-        merged.add(partA.get(indexA));
-        System.out.println("* While if: " + merged); //Debug line
-        indexA++;
+    /*
+    check both lists while they each have items in them
+    add element to merged list
+    remove 'lower' element from original list
+    */
+    while (partA.size()>=1 && partB.size()>=1){
+      if (partA.get(0).compareTo(partB.get(0)) < 0){
+        merged.add(partA.get(0));
+        partA.remove(0);
       }
-      /*else if (partA.get(indexA).compareTo(partB.get(indexB)) == 0){
-        if(partA.get(indexA).getFirst().compareTo(partB.get(indexB).getFirst()) == -1){
-          merged.add(partA.get(indexA));
-          indexA++;
+      // checks by first name if last name is same
+      else if (partA.get(0).compareTo(partB.get(0)) == 0){
+        if(partA.get(0).getFirst().compareTo(partB.get(0).getFirst()) < 0){
+          merged.add(partA.get(0));
+          partA.remove(0);
         }
         else{
-          merged.add(partB.get(indexB));
-          indexB++;
+          merged.add(partB.get(0));
+          partB.remove(0);
         }
-      }*/
+      }
       else{
-        merged.add(partB.get(indexB));
-        System.out.println("* While Else: " + merged); //Debug line
-        indexB++;
+        merged.add(partB.get(0));
+        partB.remove(0);
       }
     }
-
-    /*if (partA.size() > 0){
-      System.out.println("ifA: " + " iA:" + indexA + "  iB:" +  indexB + " " + merged); //Debug line
-      merged.add(partA.get(indexA));
+    //adds and removes if any items are left not needing to be compared
+    while (partA.size() > 0){
+      merged.add(partA.get(0));
+      partA.remove(0);
     }
-
-    if (partB.size() > 0){
-      System.out.println("ifB: " + " iA:" + indexA + "  iB:" +  indexB + " " + merged); //Debug line
-      merged.add(partB.get(indexB));
-    }*/
-
+    while (partB.size() > 0){
+      merged.add(partB.get(0));
+      partB.remove(0);
+    }
   return merged;
   }
 }
